--- a/home-2.html
+++ b/home-2.html
@@ -244,7 +244,7 @@
 						</div>
 						<div class="smoll-cir cir">
 							<p class="cir-count">120</p>
-							<p class="cir-text">Clienrs</p>
+							<p class="cir-text">Clients</p>
 						</div>
 						<div class="big-cir cir">
 							<p class="cir-count">90</p>
