--- a/home-3.html
+++ b/home-3.html
@@ -121,7 +121,7 @@
 	<!-- Services END -->
 	<!-- Solution START -->
 	<section id="solution">
-		<div class="row align-items-center">
+		<div class="row align-items-center myrow">
 			<div class="col-sm-12 col-md-6 solution-box">
 			</div>
 			<div class="col-sm-12 col-md-6 col-lg-3 offset-lg-1 solution-text">
@@ -185,35 +185,31 @@
 	<!-- Pricing END -->
 	<!-- Portfolio START -->
 	<section id="portfolio">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="row">
-					<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-4.png');">
-						<div class="overlay-portfolio">
-							<a href="#">
-								<h3>Project name : A new concept in <br> business planning</h3>
-							</a>
-							<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-5.png');">
-						<div class="overlay-portfolio">
-							<a href="#">
-								<h3>Project name : A new concept in <br> business planning</h3>
-							</a>
-							<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-6.png');">
-						<div class="overlay-portfolio">
-							<a href="#">
-								<h3>Project name : A new concept in <br> business planning</h3>
-							</a>
-							<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
-						</div>
+			<div class="row myrow">
+				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-4.png');">
+					<div class="overlay-portfolio">
+						<a href="#">
+							<h3>Project name : A new concept in <br> business planning</h3>
+						</a>
+						<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
 					</div>
 				</div>
-			</div>
+				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-5.png');">
+					<div class="overlay-portfolio">
+						<a href="#">
+							<h3>Project name : A new concept in <br> business planning</h3>
+						</a>
+						<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-6.png');">
+					<div class="overlay-portfolio">
+						<a href="#">
+							<h3>Project name : A new concept in <br> business planning</h3>
+						</a>
+						<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
 		</div>
 	</section>
 	<!-- Portfolio END -->
