--- a/home-6.html
+++ b/home-6.html
@@ -184,7 +184,7 @@
 						<p> We will explore your business problems and needs co-creatively.</p>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 tabs-box">
+				<div class="col-sm-6 col-md-3 tabs-box ">
 					<div class="tabs-item">
 						<div class="tab-icon">
 							<img src="img/icon/tabs-item-2.png" alt="">
@@ -204,7 +204,7 @@
 						<p> We will explore your business problems and needs co-creatively.</p>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 tabs-box">
+				<div class="col-sm-6 col-md-3 tabs-box tabs-box-first active-tab-box">
 					<div class="tabs-item">
 						<div class="tab-icon">
 							<img src="img/icon/tabs-item-4.png" alt="">
@@ -251,8 +251,8 @@
 					<p>Our process begins with a collaborative and holistic assessment to gain a robust understand of you, your business and key stakeholders. </p>
 				</div>
 			</div>
-			<div class="row s-mrt-80">
-				<div class="col-sm-12 col-md-4">
+			<div class="row s-mrt-80 justify-content-center">
+				<div class="col-sm-12 col-md-8 col-lg-4 col-centered">
 					<div class="pricing-item priceing-cheked">
 						<div class="checked-border"></div>
 						<p class="pricing-plan s-pdt-20">FREE</p>
@@ -271,7 +271,7 @@
 						</div> <a href="#" class="pricing-btn checked-btn">More...</a>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-4">
+				<div class="col-sm-12 col-md-8 col-lg-4 col-centered">
 					<div class="pricing-item bussines">
 						<div class="bus">
 							<p class="pricing-plan s-pdt-20">BUSINESS</p>
@@ -293,7 +293,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-4">
+				<div class="col-sm-12 col-md-8 col-lg-4 col-centered">
 					<div class="pricing-item priceing-cheked">
 						<div class="checked-border"></div>
 						<p class="pricing-plan s-pdt-20">ADVANCED</p>
@@ -404,7 +404,6 @@
 	<!-- News START -->
 	<section id="news">
 		<div class="container">
-			<div class="row">
 				<div class="row align-items-center">
 					<div class="col-sm-12 col-md-4 col-lg-3 blog-info">
 						<h4 class="h-6-subtitle">LATEST NEWS</h4>
@@ -459,8 +458,6 @@
 						</div>
 					</div>
 				</div>
-
-			</div>
 		</div>
 	</section>
 	<!-- News END -->
