--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 						<p class="s-subtitle">Here is a subscription-based software, which means you just pay an annual subscription fee to use the software, in the cloud or on your own servers.</p>
 					</div>
 				</div>
-				<div class="row align-items-center">
-					<div class="col-md-12 col-lg-4 text-center">
+				<div class="row align-items-center justify-content-center">
+					<div class="col-sm-7 col-md-7 col-lg-4 text-center col-centered">
 						<div class="pricing-item">
 							<p class="pricing-plan s-pdt-20">FREE</p>
 							<p class="pricing-amout">$<span class="amout">0</span>
@@ -201,7 +201,7 @@
 							</div> <a href="#" class="pricing-btn">More...</a>
 						</div>
 					</div>
-					<div class="col-md-12 col-lg-4 text-center">
+					<div class="col-sm-7 col-md-7 col-lg-4 text-center col-centered">
 						<div class="pricing-item priceing-cheked">
 							<div class="checked-border"></div>
 							<p class="pricing-plan s-pdt-20">BUSINESS</p>
@@ -218,7 +218,7 @@
 							</div> <a href="#" class="pricing-btn textcolor checked-btn">More...</a>
 						</div>
 					</div>
-					<div class="col-md-12 col-lg-4 text-center">
+					<div class="col-sm-7 col-md-7 col-lg-4 text-center col-centered">
 						<div class="pricing-item">
 							<p class="pricing-plan s-pdt-20">ADVANCED</p>
 							<p class="pricing-amout">$<span class="amout">49</span>
@@ -272,17 +272,17 @@
 							<div class="row">
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-1.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-2.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-3.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 							</div>
@@ -291,17 +291,17 @@
 							<div class="row">
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-3.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-1.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-2.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 							</div>
@@ -310,17 +310,17 @@
 							<div class="row">
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-2.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-3.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-1.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 							</div>
@@ -329,17 +329,17 @@
 							<div class="row">
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-3.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-2.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-1.png');">
 									<div class="overlay-portfolio">
-										<h3>Creative Startup Project</h3>
+										<a href="#">Creative Startup Project</a>
 									</div>
 								</div>
 							</div>
