--- a/home-3.html
+++ b/home-3.html
@@ -83,11 +83,11 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-8 col-centered">
-					<h3 class="home-3-title-color">OTSOURCED CHIEF INVISTMENT OFFICIER</h3>
-					<h4 class="home-3-title s-mrt-20">Gain a significiant strategic advantage</h4>
+					<h3 class="title-color">OTSOURCED CHIEF INVISTMENT OFFICIER</h3>
+					<h4 class="title s-mrt-20">Gain a significiant strategic advantage</h4>
 				</div>
 				<div class="col-sm-12 col-md-6 col-centered s-mrb-50">
-					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+					<p class="text-style s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -139,9 +139,9 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-7 col-centered">
-					<h3 class="home-3-clone-title">Pricing plan</h3>
-					<h4 class="home-3-clone-subtitle">Simple and flexible packages for businesses</h4>
-					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+					<h3 class="clone-title">Pricing plan</h3>
+					<h4 class="clone-subtitle">Simple and flexible packages for businesses</h4>
+					<p class="text-style s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
 				</div>
 			</div>
 			<div class="row s-mrt-50">
@@ -180,7 +180,6 @@
 				</div>
 			</div>
 		</div>
-		</div>
 	</section>
 	<!-- Pricing END -->
 	<!-- Portfolio START -->
@@ -188,25 +187,19 @@
 			<div class="row myrow">
 				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-4.png');">
 					<div class="overlay-portfolio">
-						<a href="#">
-							<h3>Project name : A new concept in <br> business planning</h3>
-						</a>
+						<h3><a href="#">Project name : A new concept in <br> business planning</a></h3>
 						<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-5.png');">
 					<div class="overlay-portfolio">
-						<a href="#">
-							<h3>Project name : A new concept in <br> business planning</h3>
-						</a>
+						<h3><a href="#">Project name : A new concept in <br> business planning</a></h3>
 						<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-6.png');">
 					<div class="overlay-portfolio">
-						<a href="#">
-							<h3>Project name : A new concept in <br> business planning</h3>
-						</a>
+						<h3><a href="#">Project name : A new concept in <br> business planning</a></h3>
 						<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
 					</div>
 				</div>
@@ -218,9 +211,9 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-7 col-centered">
-					<h3 class="home-3-clone-title">Trust & Integrity:</h3>
-					<h4 class="home-3-clone-subtitle">Our recipe for your business success</h4>
-					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+					<h3 class="clone-title">Trust & Integrity:</h3>
+					<h4 class="clone-subtitle">Our recipe for your business success</h4>
+					<p class="text-style s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
 				</div>
 			</div>
 			<div class="row s-mrt-50">
@@ -335,6 +328,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 	<!-- Brends END -->
 	<!-- Blog START -->
@@ -343,8 +337,8 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-8 col-centered">
-					<h3 class="home-3-clone-title">Featured news and insights</h3>
-					<h4 class="home-3-clone-subtitle">Our latest thinking on the issues that matter most in business</h4>
+					<h3 class="clone-title">Featured news and insights</h3>
+					<h4 class="clone-subtitle">Our latest thinking on the issues that matter most in business</h4>
 				</div>
 			</div>
 			<div class="row">
@@ -353,9 +347,7 @@
 						<a href="#">
 							<p class="blog-cat">BUSINESS <span>- March 2020</span></p>
 						</a>
-						<a href="#">
-							<h3 class="blog-title">Seven ways to make sure work meetings are not a waste time</h3>
-						</a>
+							<h3 class="blog-title"><a href="#">Seven ways to make sure work meetings are not a waste time</a></h3>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-6">
@@ -363,9 +355,7 @@
 						<a href="#">
 							<p class="blog-cat">BUSINESS <span>- March 2020</span></p>
 						</a>
-						<a href="#">
-							<h3 class="blog-title">Seven ways to make sure work meetings are not a waste time</h3>
-						</a>
+							<h3 class="blog-title"><a href="#">Seven ways to make sure work meetings are not a waste time</a></h3>
 					</div>
 				</div>
 			</div>
