--- a/home-4.html
+++ b/home-4.html
@@ -375,6 +375,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 	<!-- Brends END -->
 	<!-- Feedback START -->
@@ -426,49 +427,37 @@
 				<div class="col-sm-6 col-md-4 news-box">
 					<img src="img/blog/news-1.png" alt="" class="news-img">
 					<a href="#" class="news-cat">Category</a>
-					<a href="#" class="news-title">
-						<h3>What founders need to know <br> about finance</h3>
-					</a>
+					<h3><a href="#" class="news-title">What founders need to know <br> about finance</a></h3>
 					<p class="news-data">27 May, 2019</p>
 				</div>
 				<div class="col-sm-6 col-md-4 news-box">
 					<img src="img/blog/news-2.png" alt="" class="news-img">
 					<a href="#" class="news-cat">Category</a>
-					<a href="#" class="news-title">
-						<h3>What founders need to know <br> about finance</h3>
-					</a>
+					<h3><a href="#" class="news-title">What founders need to know <br> about finance</a></h3>
 					<p class="news-data">27 May, 2019</p>
 				</div>
 				<div class="col-sm-6 col-md-4 news-box">
 					<img src="img/blog/news-3.png" alt="" class="news-img">
 					<a href="#" class="news-cat">Category</a>
-					<a href="#" class="news-title">
-						<h3>What founders need to know <br> about finance</h3>
-					</a>
+					<h3><a href="#" class="news-title">What founders need to know <br> about finance</a></h3>
 					<p class="news-data">27 May, 2019</p>
 				</div>
 				<div class="col-sm-6 col-md-4 news-box">
 					<img src="img/blog/news-4.png" alt="" class="news-img">
 					<a href="#" class="news-cat">Category</a>
-					<a href="#" class="news-title">
-						<h3>What founders need to know <br> about finance</h3>
-					</a>
+					<h3><a href="#" class="news-title">What founders need to know <br> about finance</a></h3>
 					<p class="news-data">27 May, 2019</p>
 				</div>
 				<div class="col-sm-6 col-md-4 news-box">
 					<img src="img/blog/news-5.png" alt="" class="news-img">
 					<a href="#" class="news-cat">Category</a>
-					<a href="#" class="news-title">
-						<h3>What founders need to know <br> about finance</h3>
-					</a>
+					<h3><a href="#" class="news-title">What founders need to know <br> about finance</a></h3>
 					<p class="news-data">27 May, 2019</p>
 				</div>
 				<div class="col-sm-6 col-md-4 news-box">
 					<img src="img/blog/news-6.png" alt="" class="news-img">
 					<a href="#" class="news-cat">Category</a>
-					<a href="#" class="news-title">
-						<h3>What founders need to know <br> about finance</h3>
-					</a>
+					<h3><a href="#" class="news-title">What founders need to know <br> about finance</a></h3>
 					<p class="news-data">27 May, 2019</p>
 				</div>
 			</div>
