--- a/home-5.html
+++ b/home-5.html
@@ -337,32 +337,32 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 						</div>
@@ -371,32 +371,32 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 						</div>
@@ -405,32 +405,32 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 						</div>
@@ -439,32 +439,32 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 						</div>
@@ -473,32 +473,32 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-1.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-2.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-3.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-4.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-5.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/h-5-port-6.png');">
 								<div class="overlay-portfolio">
-									<h3>Creative Startup Project</h3>
+									<h3><a href="#">Creative Startup Project</a></h3>
 								</div>
 							</div>
 						</div>
@@ -523,9 +523,7 @@
 						<a href="#">
 							<p class="blog-cat">BUSINESS <span>- March 2020</span></p>
 						</a>
-						<a href="#">
-							<h3 class="blog-title">Seven ways to make sure work meetings are not a waste time</h3>
-						</a>
+							<h3 class="blog-title"><a href="#">Seven ways to make sure work meetings are not a waste time</a></h3>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-6">
@@ -533,9 +531,7 @@
 						<a href="#">
 							<p class="blog-cat">BUSINESS <span>- March 2020</span></p>
 						</a>
-						<a href="#">
-							<h3 class="blog-title">Seven ways to make sure work meetings are not a waste time</h3>
-						</a>
+							<h3 class="blog-title"><a href="#">Seven ways to make sure work meetings are not a waste time</a></h3>
 					</div>
 				</div>
 			</div>
