--- a/home-6.html
+++ b/home-6.html
@@ -418,9 +418,7 @@
 								<a href="#">
 									<p class="blog-category s-mrt-15">Category</p>
 								</a>
-								<a href="#">
-									<h3 class="blog-title">What founders need to know about finance</h3>
-								</a>
+								<h3 class="blog-title"><a href="#">What founders need to know about finance</a></h3>
 								<div class="author-box">
 									<div class="author">
 										<img src="img/blog/author-image.png">
@@ -441,9 +439,7 @@
 								<a href="#">
 									<p class="blog-category s-mrt-15">Category</p>
 								</a>
-								<a href="#">
-									<h3 class="blog-title">What founders need to know about finance</h3>
-								</a>
+								<h3 class="blog-title"><a href="#">What founders need to know about finance</a></h3>
 								<div class="author-box">
 									<div class="author">
 										<img src="img/blog/author-image.png">
