--- a/home-2.html
+++ b/home-2.html
@@ -142,6 +142,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 		</section>
 		<!-- Brends END -->
 		<!-- Player START -->
@@ -536,9 +537,7 @@
 								<a href="#">
 									<p class="blog-category s-mrt-15">Category</p>
 								</a>
-								<a href="#">
-									<h3 class="blog-title">What founders need to know about finance</h3>
-								</a>
+								<h3 class="blog-title"><a href="#">What founders need to know about finance</h3></a>
 								<div class="author-box">
 									<div class="date-box">
 										<span class="date">27 May, 2019</span>
@@ -562,9 +561,7 @@
 								<a href="#">
 									<p class="blog-category s-mrt-15">Category</p>
 								</a>
-								<a href="#">
-									<h3 class="blog-title">What founders need to know about finance</h3>
-								</a>
+								<h3 class="blog-title"><a href="#">What founders need to know about finance</h3></a>
 								<div class="author-box">
 									<div class="date-box">
 										<span class="date">27 May, 2019</span>
