--- a/home-3.html
+++ b/home-3.html
@@ -20,7 +20,7 @@
 
 <body>
 	<!-- Navbar START -->
-	<header class="navMenu">
+	<header class="navMenu" id="stick-black">
 		<div class="container">
 			<nav>
 				<div class="logo"></div>
@@ -456,7 +456,7 @@
 	<!-- Include js plugin -->
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Main-2 JS -->
-	<script src="js/main-3.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
