--- a/home-6.html
+++ b/home-6.html
@@ -20,7 +20,7 @@
 
 <body>
 	<!-- Header START -->
-	<header class="navMenu">
+	<header class="navMenu" id="stick-whith">
 		<div class="container">
 			<nav>
 				<div class="logo"></div>
@@ -76,7 +76,7 @@
 	<!-- Hero END -->
 	<!-- Brends START -->
 	<section id="brends">
-		<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-50">
+		<div id="owl-brends-2" class="owl-carousel owl-theme s-mrb-110 s-mrt-50">
 			<div class="item brends-item">
 				<img src="img/brends/brend-1.png">
 			</div>
@@ -547,7 +547,7 @@
 	<!-- Include js plugin -->
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Main-2 JS -->
-	<script src="js/main-6.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
