--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 	<!-- Navbar START -->
-	<header class="navMenu">
+	<header class="navMenu" id="stick-black">
 		<div class="container">
 			<nav>
 				<div class="logo">
