--- a/home-2.html
+++ b/home-2.html
@@ -20,7 +20,7 @@
 
 <body>
 	<!-- Navbar START -->
-	<header class="navMenu">
+	<header class="navMenu"  id="stick-whith">
 		<div class="container">
 			<nav>
 				<div class="logo"></div>
@@ -150,14 +150,14 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-12 col-lg-6">
-						<div class="video-element" id="video-element">
-							<div class="video-element__poster" id="video-poster">
+						<div class="video-element" id="video-element-2">
+							<div class="video-element__poster" id="video-poster-2">
 								<img src="img/icon/play.png" class="btn-play">
 								<p>Creative Studio,
 									<br>Technology</p>
 							</div>
 						</div>
-						<script type="text/template" id="video">
+						<script type="text/template" id="video-2">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</script>
 					</div>
@@ -663,7 +663,7 @@
 	<!-- Include js plugin -->
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Main-2 JS -->
-	<script src="js/main-2.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
