--- a/home-4.html
+++ b/home-4.html
@@ -20,7 +20,7 @@
 
 <body>
 	<!-- Header START -->
-	<header class="navMenu">
+	<header class="navMenu"  id="stick-whith">
 		<div class="container">
 			<nav>
 				<div class="logo"></div>
@@ -382,7 +382,7 @@
 	<section id="feedback">
 		<div class="row align-items-center my-row">
 			<div class="col-sm-12 col-md-12 col-lg-6 offset-lg-6">
-				<div id="owl-feedback" class="owl-carousel owl-theme">
+				<div id="owl-feedback-2" class="owl-carousel owl-theme">
 					<div class="item rev-item">
 						<div class="hed-rev">
 							<div class="feed-img  s-mrt-40">
@@ -466,13 +466,13 @@
 	<!-- News END -->
 	<!-- Video START -->
 	<section id="player">
-		<div class="video-element" id="video-element">
-			<div class="video-element__poster" id="video-poster">
+		<div class="video-element" id="video-element-2">
+			<div class="video-element__poster" id="video-poster-2">
 				<img src="img/icon/h-4-play.png" class="btn-play">
 				<h3>Watch the promo video</h3>
 			</div>
 		</div>
-		<script type="text/template" id="video">
+		<script type="text/template" id="video-2">
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</script>
 	</section>
@@ -553,7 +553,7 @@
 	<!-- Include js plugin -->
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Main-2 JS -->
-	<script src="js/main-4.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
