--- a/home-5.html
+++ b/home-5.html
@@ -20,7 +20,7 @@
 
 <body>
 	<!-- Header START -->
-	<header class="navMenu">
+	<header class="navMenu" id="stick-black">
 		<div class="container">
 			<nav>
 				<div class="logo"></div>
@@ -94,12 +94,12 @@
 					<a href="#"><i class="fas fa-arrow-right"></i> WATCH PROMO VIDEO</a>
 				</div>
 				<div class="col-md-12 col-lg-6">
-					<div class="video-element" id="video-element">
-						<div class="video-element__poster" id="video-poster">
+					<div class="video-element" id="video-element-2">
+						<div class="video-element__poster" id="video-poster-2">
 							<img src="img/icon/h-5-play.png" class="btn-play">
 						</div>
 					</div>
-					<script type="text/template" id="video">
+					<script type="text/template" id="video-2">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</script>
 				</div>
@@ -178,7 +178,7 @@
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-10 col-centered">
-					<div id="owl-feedback" class="owl-carousel owl-theme">
+					<div id="owl-feedback-3" class="owl-carousel owl-theme">
 						<div class="item">
 							<div class="cl rev-item">
 								<div class="hed-rev">
@@ -658,7 +658,7 @@
 	<!-- Include js plugin -->
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Main-2 JS -->
-	<script src="js/main-5.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
