--- a/home-6.html
+++ b/home-6.html
@@ -204,7 +204,7 @@
 						<p> We will explore your business problems and needs co-creatively.</p>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 tabs-box tabs-box-first active-tab-box">
+				<div class="col-sm-6 col-md-3 tabs-box tabs-box-first">
 					<div class="tabs-item">
 						<div class="tab-icon">
 							<img src="img/icon/tabs-item-4.png" alt="">
