--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<div class="col-md-12 col-lg-4 text-center">
 						<div class="servicesboxs">
 							<img src="img/content/services-1.png" class="s-mrb-50" alt="services-1" alt="img">
-							<a href="#" class="services-title">Digital marketing & sales</a>
+							<p><a href="#" class="services-title">Digital marketing & sales</a></p>
 							<p class="s-mrt-20 services-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate.</p> <a href="#"
 								class="textcolor s-mrt-20">Learn More</a>
 						</div>
@@ -160,7 +160,7 @@
 					<div class="col-md-12 col-lg-4 text-center">
 						<div class="servicesboxs">
 							<img src="img/content/services-2.png" class="s-mrb-50" alt="services-2" alt="img">
-							<a href="#" class="services-title">Digital marketing & sales</a>
+							<p><a href="#" class="services-title">Digital marketing & sales</a></p>
 							<p class="s-mrt-20 services-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate.</p> <a href="#"
 								class="textcolor s-mrt-20">Learn More</a>
 						</div>
@@ -168,7 +168,7 @@
 					<div class="col-md-12 col-lg-4 text-center">
 						<div class="servicesboxs">
 							<img src="img/content/services-3.png" class="s-mrb-50" alt="services-3" alt="img">
-							<a href="#" class="services-title">Digital marketing & sales</a>
+							<p><a href="#" class="services-title">Digital marketing & sales</a></p>
 							<p class="s-mrt-20 services-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate.</p>
 							<a href="#" class="textcolor s-mrt-20">Learn More</a>
 						</div>
