--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	<!-- Main Styles -->
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/blog.css">
+	<link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
 
 <body>
