--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
 	<!-- Main Styles -->
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/about.css">
+	<link rel="stylesheet" type="text/css" href="css/services.css">
 </head>
 
 <body>
@@ -60,27 +60,292 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-5">
-						<h3 class="hero-title">ABOUT US</h3>
-						<p class="hero-subtitle align-right">OUR COMPANY LIFE & VALUES</p>
+						<h3 class="hero-title">SERVICES</h3>
+						<p class="hero-subtitle align-right">OUR PROFESSIONAL HELP</p>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- Hero END -->
-
-		<!-- Services START -->
-		<!-- Services END -->
-
-		<!-- Services Tabs START -->
-		<!-- Services Tabs END -->
-
 		<!-- Info START -->
-		<!-- Info END -->
-
+		<section id="info">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-md-12 col-lg-3">
+						<div class="infobox">
+							<div class="back cl1">
+								<img src="img/icon/group-493.png" class="infoicon">
+							</div>
+							<h2>UX DESIGN</h2>
+							<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
+						</div>
+					</div>
+					<div class="col-md-12 col-lg-3">
+						<div class="row">
+							<div class="col-12">
+								<div class="infobox">
+									<div class="back cl1">
+										<img src="img/icon/group-494.png" class="infoicon">
+									</div>
+									<h2>DEVELOPMENT</h2>
+									<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
+								</div>
+							</div>
+							<div class="col-12">
+								<div class="infobox">
+									<div class="back cl1">
+										<img src="img/icon/group-495.png" class="infoicon">
+									</div>
+									<h2>BRANDING</h2>
+									<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-lg-5 infoboxlg">
+						<h4 class="s-title-sm">Our blend of experience</h4>
+						<h2 class="s-title textcolor-bl fs-36">Your business success</h2>
+						<img src="img/content/services-page-info.png" alt="">
+						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
+						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Info END-->
+		<!-- Services START -->
+		<section id="services">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-sm-12 col-md-7 serives-title col-centered">
+						<h3>Crafting delightful experiences through meticulous attention</h3>
+						<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+					</div>
+				</div>
+				<div class="row s-mrt-80">
+					<div class="col-sm-12 col-md-6 services-image-box">
+						<div class="services-image-1">
+							<img src="img/content/services-image-3.png">
+						</div>
+						<div class="services-image-2">
+							<img src="img/content/services-image-4.png">
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 services-tabs">
+						<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+							<li class="nav-item"> <a class="nav-link active" id="pills-strategy-tab" data-toggle="pill" href="#pills-strategy" role="tab" aria-controls="pills-strategy" aria-selected="true">STRATEGY & BRANDING</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link" id="pills-digital-tab" data-toggle="pill" href="#pills-digital" role="tab" aria-controls="pills-digital" aria-selected="false">DIGITAL & DEVELOPMENT</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link" id="pills-studio-tab" data-toggle="pill" href="#pills-studio" role="tab" aria-controls="pills-studio" aria-selected="false">STUDIO & STORIES</a>
+							</li>
+						</ul>
+						<div class="tab-content" id="pills-tabContent">
+							<div class="tab-pane fade show active col-sm-12 col-md-9" id="pills-strategy" role="tabpanel" aria-labelledby="pills-strategy-tab">
+								<h3 class="s-mrt-60">Creating strong imagery</h3>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<button class="s-btn-2-sm btnstyle-2 s-mrt-30">Learn more</button>
+							</div>
+							<div class="tab-pane fade col-sm-12 col-md-9" id="pills-digital" role="tabpanel" aria-labelledby="pills-digital-tab">
+								<h3 class="s-mrt-60">Creating strong imagery</h3>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<button class="s-btn-2-sm btnstyle-2 s-mrt-30">Learn more</button>
+							</div>
+							<div class="tab-pane fade col-sm-12 col-md-9" id="pills-studio" role="tabpanel" aria-labelledby="pills-studio-tab">
+								<h3 class="s-mrt-60">Creating strong imagery</h3>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<button class="s-btn-2-sm btnstyle-2 s-mrt-30">Learn more</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Services END-->
+		<!-- Specialize START -->
+		<section id="specialize">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-sm-12 col-md-6 col-lg-6 specialize-text">
+						<h4 class="s-title-sm">Our blend of experience</h4>
+						<h2 class="s-title textcolor-bl">Your business success</h2>
+						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
+						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 specialize-boxs">
+						<div class="medium-cir cir">
+							<p class="cir-count">8+</p>
+							<p class="cir-text">Offices</p>
+						</div>
+						<div class="smoll-cir cir">
+							<p class="cir-count">120</p>
+							<p class="cir-text">Clients</p>
+						</div>
+						<div class="big-cir cir">
+							<p class="cir-count">90</p>
+							<p class="cir-text">Employees</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Specialize END-->
 		<!-- Feedback START -->
-		<!-- Feedback END -->
+		<section id="feedback">
+			<div class="container">
+				<div class="row s-mrb-60">
+					<div class="col-sm-12 col-md-12">
+						<h3 class="s-title textcolor-bl text-cent">Testimonials & Reviews from Our Customers</h3>
+					</div>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-sm-12 col-md-10 col-centered">
+						<div id="owl-feedback-3" class="owl-carousel owl-theme">
+							<div class="item">
+								<div class="cl rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+								<div class="op rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+							</div>
+							<div class="item">
+								<div class="cl rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+								<div class="op rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+							</div>
+							<div class="item">
+								<div class="cl rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+								<div class="op rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+							</div>
+							<div class="item">
+								<div class="cl rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+								<div class="op rev-item">
+									<div class="hed-rev">
+										<div class="feed-img s-mrt-40">
+											<img src="img/content/h-4-feed-item-1.png" alt="">
+										</div>
+										<div class="feed-stars s-mrt-40">
+											<img src="img/icon/reviews-stars.png"><br>
+											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+										</div>
+									</div>
+									<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+									<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+								</div>
+							</div>
 
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Feedback END -->
 		<!-- Newsletter START -->
+		<section id="news">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-sm-12">
+						<h3 class="news-title">Join our Newsletter!</h3>
+					</div>
+					<div class="col-sm-12 col-md-7 news-form">
+						<div class="input-group">
+							<input type="email" class="form-control news-input" placeholder="Enter your email"> <span class="input-group-btn">
+								<button class="bluebg s-btn-sm btnstyle send-req" type="submit">
+									<img src="img/icon/send.png" class="news-btn-send" alt="img">
+									<span>Send request</span>
+								</button>
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- Newsletter END -->
 	</main>
 	<!-- Main END -->
