Services pages Fixed

--- a/services-2.html
+++ b/services-2.html
@@ -15,7 +15,7 @@
 	<!-- Main Styles -->
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/about-2.css">
+	<link rel="stylesheet" type="text/css" href="css/services-2.css">
 </head>
 
 <body>
